--- a/index.html
+++ b/index.html
@@ -19,13 +19,40 @@
           <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="About.html">About</a></li>
-              <li><a href="Contact.html">Contact</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
       
       </header>
+
+      <div id="carouselExampleIndicators" class="carousel slide slide-show-render-full slide-content slide-image slides slide-show mx-auto wrapper" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./images/SALE.jpg" class="d-block w-100" alt="SALE">
+          </div>
+          <div class="carousel-item">
+            <img src="./images/big mega sale.jpg" class="d-block w-100" alt="Sale">
+          </div>
+          <div class="carousel-item">
+            <img src="pickle" class="d-block w-100" alt="Farmer-bots">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
+      </div>
 
 
 
