--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/SALE.jpg" class="d-block w-100" alt="SALE">
+            <img src="./images/spring sale.png" class="d-block w-100" alt="SALE">
           </div>
           <div class="carousel-item">
-            <img src="./images/big mega sale.jpg" class="d-block w-100" alt="Sale">
+            <img src="./images/better sale.jpg" class="d-block w-100" alt="Sale">
           </div>
           <div class="carousel-item">
-            <img src="pickle" class="d-block w-100" alt="Farmer-bots">
+            <img src="./images/better sale.jpg" class="d-block w-100" alt="happy dogo">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
@@ -79,7 +79,8 @@
 
 
 
-
+      <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 <script src="app.js"></script>    
 </body>
 </html>
