--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/spring sale.png" class="d-block w-100" alt="SALE">
+            <img src="./images/spring sale.png" class=" " alt="50%" height="420px" width="800px">
           </div>
           <div class="carousel-item">
-            <img src="./images/better sale.jpg" class="d-block w-100" alt="Sale">
+            <img src="./images/better sale.jpg" class=" " alt="50%" height="420px" width="800px">
           </div>
           <div class="carousel-item">
-            <img src="./images/better sale.jpg" class="d-block w-100" alt="happy dogo">
+            <img src="./images/better sale.jpg" class=" " alt="happy dogo" height="420px" width="800px">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
@@ -53,6 +53,93 @@
           <span class="sr-only">Next</span>
         </button>
       </div>
+
+
+
+
+      <section class="center-Icons">
+
+        <div class="">
+
+            <div class="row">
+
+            <div>
+                <img class="pet-Icon" src="./images/Happy-Dog-Boi.jpg" alt="">
+            </div>
+
+            <div>
+                <img class="pet-Icon" src="./images/happy-cat-icon.jpg" alt="">
+            </div>
+
+            <div>
+                <img class="pet-Icon" src="./images/Happy-reptile-Icon.jpg" alt="">
+            </div>
+
+            <div>
+                <img class="pet-Icon" src="./images/Happy -froggy-boi.jpg" alt="">
+            </div>
+
+            <div>
+                <img class="pet-Icon" src="./images/expressive birdy.jpg" alt="">
+            </div>
+            
+            </div>
+
+        </div>
+
+      </section>
+
+      <section>
+        <div class="center-Icons">
+
+          <div class="row">
+
+          <div>
+              <img class="pet-Icon" src="./images/also-horse.jpg" alt="">
+          </div>
+
+          <div>
+              <img class="pet-Icon" src="./images/Cow-Lord.jpg" alt="">
+          </div>
+
+          <div>
+              <img class="pet-Icon" src="./images/chicken-boi.jpg" alt="">
+          </div>
+
+          <div>
+              <img class="pet-Icon" src="./images/Happy-Pig.jpg" alt="">
+          </div>
+
+          <div>
+              <img class="pet-Icon" src="./images/curious-sheep.jpg" alt="">
+          </div>
+          
+          </div>
+
+      </div>
+
+      </section>
+
+<footer class="footer-color">
+
+  <section class="">
+
+    <div class="">
+
+      <div class="row footer-space">
+        <p>content</p>
+        <div>content</div>
+        <div>content</div>
+      </div>
+
+    </div>
+
+  </section>
+
+</footer>
+
+
+
 
 
 
