--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
             <div class="row">
 
             <div>
-                <img class="pet-Icon" src="./images/Happy-Dog-Boi.jpg" alt="">
+                <img class="pet-Icon pet-Icon-row1-margin" src="./images/Happy-Dog-Boi.jpg" alt="">
             </div>
 
             <div>
-                <img class="pet-Icon" src="./images/happy-cat-icon.jpg" alt="">
+                <img class="pet-Icon pet-Icon-row1-margin" src="./images/happy-cat-icon.jpg" alt="">
             </div>
 
             <div>
-                <img class="pet-Icon" src="./images/Happy-reptile-Icon.jpg" alt="">
+                <img class="pet-Icon pet-Icon-row1-margin" src="./images/Happy-reptile-Icon.jpg" alt="">
             </div>
 
             <div>
-                <img class="pet-Icon" src="./images/Happy -froggy-boi.jpg" alt="">
+                <img class="pet-Icon pet-Icon-row1-margin" src="./images/Happy -froggy-boi.jpg" alt="">
             </div>
 
             <div>
-                <img class="pet-Icon" src="./images/expressive birdy.jpg" alt="">
+                <img class="pet-Icon pet-Icon-row1-margin" src="./images/expressive birdy.jpg" alt="">
             </div>
             
             </div>
@@ -95,23 +95,23 @@
           <div class="row">
 
           <div>
-              <img class="pet-Icon" src="./images/also-horse.jpg" alt="">
+              <img class="pet-Icon pet-Icon-row2-margin" src="./images/also-horse.jpg" alt="">
           </div>
 
           <div>
-              <img class="pet-Icon" src="./images/Cow-Lord.jpg" alt="">
+              <img class="pet-Icon pet-Icon-row2-margin" src="./images/Cow-Lord.jpg" alt="">
           </div>
 
           <div>
-              <img class="pet-Icon" src="./images/chicken-boi.jpg" alt="">
+              <img class="pet-Icon pet-Icon-row2-margin" src="./images/chicken-boi.jpg" alt="">
           </div>
 
           <div>
-              <img class="pet-Icon" src="./images/Happy-Pig.jpg" alt="">
+              <img class="pet-Icon pet-Icon-row2-margin" src="./images/Happy-Pig.jpg" alt="">
           </div>
 
           <div>
-              <img class="pet-Icon" src="./images/curious-sheep.jpg" alt="">
+              <img class="pet-Icon pet-Icon-row2-margin" src="./images/curious-sheep.jpg" alt="">
           </div>
           
           </div>
@@ -120,16 +120,19 @@
 
       </section>
 
-<footer class="footer-color">
+<footer class="footer-color" id="footer">
 
   <section class="">
 
-    <div class="">
+    <div class="container">
 
       <div class="row footer-space">
-        <p>content</p>
-        <div>content</div>
-        <div>content</div>
+
+        <div class="font-footer-call">24/7 Customer Service: 1-800-868-6868</div>
+        <div class="font-footer-call"></divclass> About</div>
+        <div class="font-footer-call">FAQ</div>
+        <div class="font-footer-call">Facebook/ Twitter/ Youtube</div>
+
       </div>
 
     </div>
