--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div id="heading" class="bg-light">
           </div>
           <nav>
-            <ul>
+            <ul class="font-for-nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
@@ -38,10 +38,10 @@
             <img src="./images/spring sale.png" class=" " alt="50%" height="420px" width="800px">
           </div>
           <div class="carousel-item">
-            <img src="./images/better sale.jpg" class=" " alt="50%" height="420px" width="800px">
+            <img src="./images/cute-pup.jpg" class=" " alt="50%" height="420px" width="800px">
           </div>
           <div class="carousel-item">
-            <img src="./images/better sale.jpg" class=" " alt="happy dogo" height="420px" width="800px">
+            <img src="./images/so-cute.jpg" class=" " alt="happy dogo" height="420px" width="800px">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
@@ -126,10 +126,9 @@
 
     <div class="container">
 
-      <div class="row footer-space">
+      <div class="row footer-space text-white">
 
         <div class="font-footer-call">24/7 Customer Service: 1-800-868-6868</div>
-        <div class="font-footer-call"></divclass> About</div>
         <div class="font-footer-call">FAQ</div>
         <div class="font-footer-call">Facebook/ Twitter/ Youtube</div>
 
