--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/spring sale.png" class=" " alt="50%" height="420px" width="800px">
+            <img src="./images/spring sale.png" class="wrapper" alt="" height="" width="">
           </div>
           <div class="carousel-item">
-            <img src="./images/cute-pup.jpg" class=" " alt="50%" height="420px" width="800px">
+            <img src="./images/cute-pup.jpg" class="wrapper" alt="" height="" width="">
           </div>
           <div class="carousel-item">
-            <img src="./images/so-cute.jpg" class=" " alt="happy dogo" height="420px" width="800px">
+            <img src="./images/so-cute.jpg" class="wrapper" alt="" height="" width="">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
@@ -99,7 +99,7 @@
           </div>
 
           <div>
-              <img class="pet-Icon pet-Icon-row2-margin" src="./images/Cow-Lord.jpg" alt="">
+              <img class="pet-Icon pet-Icon-row2-margin" src="./images/black-cow.jpg" alt="">
           </div>
 
           <div>
