--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@ Our people are pet people, because you are pet people!
               </li>
 
               <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                  <p>contact@happybox.com</p>
+                  <p class="contact-email-marg">contact@happybox.com</p>
               </li>
           </ul>
       </div>
