--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
       <section style="text-align: center" class="container">
 
         <div>
-          <img class="about-image-shape" src="./images/guys-and-dog.jpg" alt="" srcset="">
+          <img class="about-image-shape" src="./images/cat-and-girl.jpg" alt="" srcset="">
         </div>
 
       </section>
