--- a/bovinae.html
+++ b/bovinae.html
@@ -28,10 +28,10 @@
       </header>
 
 
-      <h1>Bovinae Store</h1>
+      <h1 class="text-center">Bovinae Store</h1>
 
       <!--how the Java Script store is injected into the HTML for display-->
-      <div id="farmersmarket"></div>
+      <div id="cowmarket"></div>
 
       <footer class="footer-color" id="footer">
 
@@ -83,6 +83,6 @@
       
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-      <script src="app.js"></script>    
+      <script src="bovinaeShop.js"></script>    
       </body>
       </html>
