--- a/avian.html
+++ b/avian.html
@@ -30,9 +30,9 @@
 
 
   
-      <h1>Avian Store</h1>
+      <h1 class="text-center">Avian Store</h1>
 
-
+      <div id="avianmarket"></div>
 
       <footer class="footer-color" id="footer">
 
@@ -83,6 +83,6 @@
       
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-      <script src="app.js"></script>    
+      <script src="avianShop.js"></script>    
       </body>
       </html>
