--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       
       </header>
 
-      <div id="carouselExampleIndicators" class="carousel slide slide-show-render-full slide-content slide-image slides slide-show mx-auto wrapper" data-ride="carousel">
+      <div id="carouselExampleIndicators" class="carousel-margin-top carousel slide slide-show-render-full slide-content slide-image slides slide-show mx-auto wrapper" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
@@ -57,11 +57,11 @@
 
 
 
-      <section class="center-Icons">
+      <section class="">
 
         <div class="">
 
-            <div class="row">
+            <div class="row div-row center-Icons">
 
             <div>
               <a href="./kanine.html">
@@ -100,9 +100,9 @@
       </section>
 
       <section>
-        <div class="center-Icons">
+        <div class="">
 
-          <div class="row">
+          <div class="row div-row center-Icons">
 
           <div>
             <a href="./equine.html">
